infrastructure/base/cilium/httproute-hubble-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: platform-private
      namespace: infrastructure
  hostnames:
    - "hubble-${cluster_name}.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
